# firefox-native-manifest-rs

./: Cargo.toml  README.md
src/: common.rs  lib.rs  unix.rs  windows.rs
types/: Cargo.toml  lib.rs
