[package]
name = "firefox-native-manifest"
description = "Crate to help register native manifest for WebExtensions on Firefox"
keywords = ["firefox", "webext", "webextensions"]
version = "0.1.0"
authors = ["Xidorn Quan <me@upsuper.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/upsuper/firefox-native-manifest-rs"

[dependencies]
home = "0.5"
once_cell = "1.4"
regex = "1.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[dependencies.types]
version = "0.1"
path = "types"
package = "firefox-native-manifest-types"

[target.'cfg(windows)'.dependencies]
winreg = "0.7"

[workspace]
members = ["types"]
